fixed scrollbar issue and fixed buttons not working

--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@
         height: 100%;
         overflow: auto;
         width: 100%;
+        overflow-y: scroll;
     }
     .infoText {
         text-align: center;
